@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T02:04:02Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-25T08:30:23Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
