@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-24T16:35:57Z",
+  "timestamp" : "2022-05-25T08:30:23Z",
   "count_outdated" : 142,
   "uniques_outdated" : 57,
-  "count" : 179,
+  "count" : 178,
   "uniques" : 80,
   "clones" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
