@@ -1,10 +1,10 @@
 {
-  "count": 37,
+  "count": 36,
   "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
